Add registration, login and logout

--- a/login_registration/login_registration/templates/base.html
+++ b/login_registration/login_registration/templates/base.html
@@ -13,12 +13,16 @@
 </head>
 
 <body>
-    <header>
-        <h1>Kolton's Django Stuff</h1>
-    </header>
-    <main>
+  <div class="banner">
+    <div class="links">
+      
+    </div>
 
-    </main>
+  </div>
+
+      {% block content %}
+      {% endblock %}
+
 </body>
 
 </html>
